kubernetes/apps/teamarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: teamarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`teamarr.mpdavis.com`)
      kind: Rule
      middlewares:
        - name: authelia
          namespace: authelia
      services:
        - name: teamarr
          port: 9195
  tls: {}
